// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput/> renders a checked checkbox 1`] = `
<div
  className="form-group"
>
  <label>
    Foobar
  </label>
  <input
    checked={true}
    className="form-control"
    label="Foobar"
    name="foobar"
    type="checkbox"
    value="Foobar"
  />
  <ul />
</div>
`;

exports[`<FormInput/> renders a default input with basic props 1`] = `
<div
  className="form-group"
>
  <label>
    Foobar
  </label>
  <input
    className="form-control"
    label="Foobar"
    name="foobar"
    placeholder="Foobaz"
    value="Foobar"
  />
  <ul />
</div>
`;

exports[`<FormInput/> renders a disabled input 1`] = `
<div
  className="form-group"
>
  <label>
    Foobar
  </label>
  <input
    className="form-control"
    disabled={true}
    label="Foobar"
    name="foobar"
    value="Foobar"
  />
  <ul />
</div>
`;

exports[`<FormInput/> renders an input with maxLength 1`] = `
<div
  className="form-group"
>
  <label>
    Foobar
  </label>
  <input
    className="form-control"
    label="Foobar"
    maxLength={50}
    name="foobar"
    placeholder="Foobaz"
    value="Foobar"
  />
  <ul />
</div>
`;

exports[`<FormInput/> renders an unchecked checkbox 1`] = `
<div
  className="form-group"
>
  <label>
    Foobar
  </label>
  <input
    checked={false}
    className="form-control"
    label="Foobar"
    name="foobar"
    type="checkbox"
    value="Foobar"
  />
  <ul />
</div>
`;
